# qimgv

./: CMakeLists.txt
qimgv/: CMakeLists.txt  core.cpp  core.h
qimgv/components/: CMakeLists.txt  directorymodel.cpp  directorymodel.h  directorypresenter.cpp
qimgv/components/directorymanager/: directorymanager.cpp  directorymanager.h
qimgv/components/scriptmanager/: scriptmanager.cpp
qimgv/gui/: mainwindow.cpp
qimgv/gui/customwidgets/: thumbnailview.cpp  thumbnailwidget.cpp
qimgv/gui/dialogs/: resizedialog.cpp
qimgv/gui/folderview/: folderview.cpp  folderview.ui  thumbnailgridwidget.cpp
qimgv/gui/overlays/: floatingmessage.cpp
qimgv/utils/: randomizer.cpp  wallpapersetter.cpp
